--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "collect-stream": "^1.2.1",
     "hypercore": "^8.4.1",
     "kappa-core": "github:Frando/kappa-core#exp-0.1.3",
-    "kappa-sparse-indexer": "github:Frando/kappa-sparse-indexer#master",
+    "kappa-sparse-indexer": "^0.5.4",
     "level": "^5.0.1",
-    "memdb": "^1.3.1",
+    "level-mem": "^5.0.1",
     "mkdirp": "^0.5.1",
     "multifeed": "5.1.1",
     "nyc": "^14.1.1",
     "random-access-memory": "^3.1.1",
     "rimraf": "^2.6.3",
-    "subleveldown": "^4.1.4",
+    "subleveldown": "^5.0.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.11.0",
     "tape-plus": "^1.0.0",
